@@ -1,5 +1,8 @@
 Release Note
 
+* 1/24/2015
+  * fixed CF so that retried child is not done before the parent re-opens output
+
 * 1/22/2015
   * improved SQL in duplicateFilesForReuse 
 
